RESOLVED FIXED302411
[blocks-in-inline] Fix ASSERT in fast/block/margin-collapse/block-inside-inline/021.html
https://bugs.webkit.org/show_bug.cgi?id=302411
Summary [blocks-in-inline] Fix ASSERT in fast/block/margin-collapse/block-inside-inli...
alan
Reported 2025-11-12 10:50:12 PST
ssia
Attachments
[fast-cq]Patch (4.23 KB, patch)
2025-11-12 11:00 PST, alan
no flags
alan
Comment 1 2025-11-12 11:00:18 PST
Created attachment 477381 [details] [fast-cq]Patch
EWS
Comment 2 2025-11-12 14:11:34 PST
Committed 302937@main (37b7dbe7967a): <https://commits.webkit.org/302937@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477381 [details].
Radar WebKit Bug Importer
Comment 3 2025-11-12 14:12:13 PST
Note You need to log in before you can comment on or make changes to this bug.