[blocks-in-inline] Fix ASSERT in fast/block/margin-collapse/block-inside-inline/021.html https://bugs.webkit.org/show_bug.cgi?id=302411

Reviewed by Antti Koivisto.

hasInlineContent() in LineLayoutResult is supposed to return false when the line
has block content.

Test: fast/inline/blocks-in-inline-float-clear.html

* LayoutTests/fast/inline/blocks-in-inline-float-clear-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-float-clear.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::inlineContentEnding):
* Source/WebCore/layout/formattingContexts/inline/LineLayoutResult.h:

Canonical link: https://commits.webkit.org/302937@main