Source/WebCore/layout/formattingContexts/inline/LineLayoutResult.h
@@ -91,7 +91,7 @@ struct LineLayoutResult {
 
     // Misc
     enum InlineContentEnding : uint8_t { Generic, Hyphen, LineBreak };
-    std::optional<InlineContentEnding> inlineContentEnding { }; // No value means line does not have any inline content (either float or out-of-flow)
+    std::optional<InlineContentEnding> inlineContentEnding { }; // No value means line does not have any inline content (either float, out-of-flow or block inside inline)
     bool hasInlineContent() const { return inlineContentEnding.has_value(); }
     bool endsWithHyphen() const { return inlineContentEnding && *inlineContentEnding == InlineContentEnding::Hyphen; }
     bool endsWithLineBreak() const { return inlineContentEnding && *inlineContentEnding == InlineContentEnding::LineBreak; }
